--- a/front/src/css/produtos.css
+++ b/front/src/css/produtos.css
@@ -5,6 +5,10 @@
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: center;
     
+}
+
+.css_prod{
+ margin-left: 10vw;
 }
